fixed the POST call body again
